# mcp-client-python

./: .env  CONTEXT_MEMORY.md  README.md  client.py  pyproject.toml  servers.yaml
core/: context_manager.py  llm_service.py  logger.py  mcp_client.py
logs/: context_history.json
servers/: crawler.py  weather.py
test/: test_context.py
